2009-06-13  smeghead  <smeghead@smeghead-laptop>

	* 基本的なデータ構造に、simple_stringを使うように修正開始。

2009-06-10  smeghead  <smeghead@smeghead-laptop>

	* 日本語によるメール送信処理の作成中

2009-05-31  smeghead  <smeghead@smeghead-laptop>

	* リクエストされたURLを求める処理に問題があったのを修正した。環境変数の
    HTTPSを判定して、nullポインタを示していない場合、SSLとして判定するようにし
    た。

2009-05-18  smeghead <smeghead@users.sourceforge.jp>

    * FreeBSDの場合にも LFLAGS に、-ldl が付いていたため FreeBSD でコンパイル
      に失敗していた。Linuxの場合に、 -ldl を付加するようにMakefileを修正した。

2009-04-24  smeghead <smeghead@users.sourceforge.jp>

    * SSL接続時に、hookスクリプトに渡すホスト名を正しく作れない問題を修正した。

2009-04-18  smeghead <smeghead@users.sourceforge.jp>

    * 利便性のためにトップページのリンクを追加した。

2009-03-20  smeghead <smeghead@users.sourceforge.jp>

    * 設定情報のエクスポートのスクリプトを更新した。
    * トップの管理ツールで、サブプロジェクトのデータベースパスを表示するようにした。

2009-03-19  smeghead <smeghead@users.sourceforge.jp>

    * 検索結果のCSV形式でのダウンロードに加えて、HTML形式でダウンロードして
      エクセルで開くリンクを追加した。

2009-03-17  smeghead <smeghead@users.sourceforge.jp>

    * copyrightの表記を2009に更新した。

2009-03-16  smeghead <smeghead@users.sourceforge.jp>

    * 統計情報グラフのサイズ指定をStarbug1 1.1系のサイズ指定にした。

2009-03-11  smeghead <smeghead@users.sourceforge.jp>

    * "のHTMLエスケープの処理が間違っていたのを修正した。スペルミス
    * リリース準備

2009-03-09  smeghead <smeghead@users.sourceforge.jp>

    * 日付のフィールドに保存した値が返信時に、テキストフィールに表示されない問題を修正した。

2009-02-19  smeghead <smeghead@users.sourceforge.jp>

    * Firefox3でグラフの凡例の文字が、ずれていたのを修正した。
      CSSの定義を削除した。

2009-01-20  smeghead <smeghead@users.sourceforge.jp>

    * チケット一括登録で改行を含む項目を正しくパースできなかったのを修正した。

2009-01-11  smeghead <smeghead@users.sourceforge.jp>

    * 1.2.6-bataリリース

2009-01-11  smeghead <smeghead@users.sourceforge.jp>

    * メール送信のモジュールの作成中。現在、マルチバイトを含まないメールを送信できる状態。

2009-01-08  smeghead <smeghead@users.sourceforge.jp>

    * メール送信のモジュールの作成中。
    * インストールの説明を更新した。Starbug1のコンパイルには、gnuのmakeが必要であることを追記した。

2009-01-07  smeghead <smeghead@users.sourceforge.jp>

    * メール送信のモジュールの作成中。現在存在するフックの仕組みをC言語の動的ライブラリに拡張する作業中。
