@@ -20,5 +20,19 @@ function initPage(e) {
             }
             return true;
         });
+    var buttons = $$('input.add_new_row');
+    buttons = buttons.constructor == Array ? buttons : [buttons];
+    buttons.each(function(b) {
+        var no = 1;
+        Event.observe(b, 'click', function(e) {
+            var field_id = b.id.substring('add_new_row.field'.length);
+            var parents = b.ancestors();
+            var row = parents[1]; //trオブジェクトを取得する。
+            var row_template = $('row_template').innerHTML;
+            row_template = row_template.replace(/\[id\]/g, field_id).replace(/\[no\]/g, no++);
+            alert(row_template);
+            new Insertion.After(row, row_template);
+        });
+    });
 }
 //  vim: set ts=4 sw=4 sts=4 expandtab fenc=utf-8:
