@@ -1,3 +1,11 @@
+2009-06-14  smeghead  <smeghead@smeghead-laptop>
+
+	* 管理ツール側でユーザ定義のスタイルシートを読み込めないバグを修正した。
+    * 管理ツールで新しい項目の追加時に、初期に指定できる選択肢の項目数を5から
+    10に増やした。
+    * 管理ツールの項目の編集時に、javascriptで項目を動的に増やすことができるよ
+    うにした。
+
 2009-06-13  smeghead  <smeghead@smeghead-laptop>
 
 	* 基本的なデータ構造に、simple_stringを使うように修正開始。
